Добавил кнопку на лого в хэдере

--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="header-inner">
-    <img src="assets/img/logo.png" alt="otdel33 logo" class="header-logo logo-black">
+    <img src="assets/img/logo.png" alt="otdel33 logo" class="header-logo logo-black" style="cursor:pointer" onclick="goToIntro()">
     <div class="header-menu">
       <button class="header-btn" onclick="goToProjects()">проекты</button>
       <button class="header-btn" onclick="location.href='contacts.html'">контакты</button>
